--- a/references.bib
+++ b/references.bib
@@ -237,7 +237,35 @@
 @article{BestBuyPartner,
   url = {https://news.yahoo.com/citigroup-moves-best-buy-credit-165042624.html}
 },
+@inbook{Holzinger2022,
+  author = {Holzinger, A. and Goebel, R. and Fong, R. and Moon, T. and M{\"u}ller, K.-R. and Samek, W.},
+  booktitle = {XxAI - Beyond Explainable AI},
+  title = {General Pitfalls of Model-Agnostic Interpretation Methods for Machine Learning Models},
+  year = {2022},
+  publisher = {Springer International Publishing AG},
+  doi = {10.1007/978-3-031-04083-2_4}
+},
+@article{Makridakis2018,
+  title = {Statistical and Machine Learning forecasting methods: Concerns and ways forward},
+  author = {Makridakis, S. and Spiliotis, E. and Assimakopoulos, V.},
+  journal = {PLoS ONE},
+  volume = {13},
+  number = {3},
+  year = {2018},
+  doi = {10.1371/journal.pone.0194889}
+},
+@article{Makridakis2020,
+  title = {The M4 Competition: 100,000 time series and 61 forecasting methods},
+  author = {Makridakis, S. and Spiliotis, E. and Assimakopoulos, V.},
+  journal = {International Journal of Forecasting},
+  volume = {36},
+  number = {1},
+  year = {2020},
+  pages = {54–74},
+  doi = {10.1016/j.ijforecast.2019.05.001}
+},
 
+Christoph Molnar, Gunnar König, Julia Herbinger, Timo Freiesleben, Susanne Dandl, Christian A. Scholbeck et al.
 
 
 #Hierarchical modeling and analysis for spatial data
