--- a/model_hierarchy_event.qmd
+++ b/model_hierarchy_event.qmd
@@ -42,17 +42,18 @@ Various models are tested to identify which achieves the lowest AICc value.
 m1 <- lmer(UBPRE524.diff ~ (1 | BankType/BankName), data = estimation_data, REML = FALSE)
 m2 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName)+ UNRATE.log.diff + UNRATE.log.diff.lag1 + UNRATE.log.diff.lag2  , data = estimation_data, REML = FALSE)
 m3 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName)+ RRSFS.Pop.log.diff + RRSFS.Pop.log.diff.lag1 + RRSFS.Pop.log.diff.lag2 , data = estimation_data, REML = FALSE)
-m4 <- lmer(UBPRE524.diff ~ (1 +UBPRB538.log.diff | BankType/BankName) + RRSFS.Pop.log.diff + TDSP.log.diff + B069RC1.Pop.CPI.log.diff.lag1 , data = estimation_data, REML = FALSE)
+m4 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + RRSFS.Pop.log.diff + TDSP.log.diff + B069RC1.Pop.CPI.log.diff.lag1 , data = estimation_data, REML = FALSE)
 m5 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + RRSFS.Pop.log.diff + TDSP.log.diff + RRSFS.Pop.log.diff.lag1 , data = estimation_data, REML = FALSE)
 m6 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + RRSFS.Pop.log.diff + UNRATE.log.diff + UNRATE.log.diff.lag1 , data = estimation_data, REML = FALSE)
 m7 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + TDSP.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 , data = estimation_data, REML = FALSE)
-m8 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff,data = estimation_data, REML = FALSE)
+m8 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + Qtr | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff,data = estimation_data, REML = FALSE)
+m9 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff,data = estimation_data, REML = FALSE)
 ```
 ```{r}
 #| warning: false
 #| label: tbl-hier-aicc
 #| tbl-cap: AICc Summary. The lower the AICc value, the better the balance between model complexity (number of parameters) and goodness of fit
-model_comparison <- model.sel( m1, m2, m3, m4, m5, m6, m7, m8, rank = "AICc")
+model_comparison <- model.sel( m1, m2, m3, m4, m5, m6, m7, m8, m9, rank = "AICc")
 
 model_comparison |> as.data.frame() |> rownames_to_column(var = "Model")|> 
     mutate(across(where(is.numeric), \(x) round(x,2))) |> 
@@ -71,15 +72,15 @@ Focusing in on model 8 - we can test variations of this model. Notably, changing
 #| warning: false
 #| code-fold: false
 #| eval: true
-m8.1 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 ,data = estimation_data, REML = FALSE)
-m8.2 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff + RRSFS.Pop.log.diff + UNRATE.log.diff + UNRATE.log.diff.lag1,data = estimation_data, REML = FALSE)
-m8.3 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff | BankType/BankName) + UBPRE524.group.log.diff+ TDSP.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 ,data = estimation_data, REML = FALSE)
-m8.4 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 ,data = estimation_data, REML = FALSE)
-m8.5 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankType/BankName) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1 ,data = estimation_data, REML = FALSE)
-m8.6 <-  lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff.lag3 + UBPR3815.log.diff | BankType/BankName) + UBPRE524.group.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 + Qtr ,data = estimation_data, REML = FALSE)
-m8.7 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankName/Qtr) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1, data = estimation_data, REML = FALSE)
-m8.8 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankName/Qtr) + UBPRE524.group.log.diff + UBPRE524.all.log.diff + TDSP.log.diff + TDSP.log.diff.lag1, data = estimation_data, REML = FALSE)
-m8.9 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff | BankName/Qtr) + UBPRE524.group.log.diff, data = estimation_data, REML = FALSE)
+m8.1 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + Qtr | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 ,data = estimation_data, REML = FALSE)
+m8.2 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + Qtr| BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff + RRSFS.Pop.log.diff + UNRATE.log.diff + UNRATE.log.diff.lag1,data = estimation_data, REML = FALSE)
+m8.3 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + Qtr| BankType/BankName) + UBPRE524.group.log.diff+ TDSP.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 ,data = estimation_data, REML = FALSE)
+m8.4 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff + Qtr | BankType/BankName) + UBPRE524.all.log.diff + UBPRE524.group.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 ,data = estimation_data, REML = FALSE)
+m8.5 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff + Qtr | BankType/BankName) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1 ,data = estimation_data, REML = FALSE)
+m8.6 <-  lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff.lag3 + UBPR3815.log.diff + Qtr| BankType/BankName) + UBPRE524.group.log.diff + TDSP.log.diff.lag1 + TDSP.log.diff.lag2 + Qtr ,data = estimation_data, REML = FALSE)
+m8.7 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff + Qtr | BankName) + UBPRE524.group.log.diff + TDSP.log.diff + TDSP.log.diff.lag1, data = estimation_data, REML = FALSE)
+m8.8 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff + Qtr | BankName) + UBPRE524.group.log.diff + UBPRE524.all.log.diff + TDSP.log.diff + TDSP.log.diff.lag1, data = estimation_data, REML = FALSE)
+m8.9 <- lmer(UBPRE524.diff ~ (1 + UBPRB538.log.diff + UBPR3815.log.diff + Qtr | BankName) + UBPRE524.group.log.diff, data = estimation_data, REML = FALSE)
 
 ```
 ```{r}
@@ -130,7 +131,7 @@ top_model <- lmer(formula(eval(as.name(model_name))), data = estimation_data, RE
 ```{r}
 #| warning: false
 #| label: fig-plot-fit-hier
-#| fig-cap: "Fitted vs. Observed for estimation data on sub-set of firms"
+#| fig-cap: "Fitted vs. Observed for estimation data on sub-set of firms for model 8.7"
 #| fig-height: 10
 augmented_data <- augment(top_model) |> 
                     mutate(Quarter = estimation_data$Quarter,
@@ -197,11 +198,12 @@ Based on the t-statistics, TDSP.log.diff.lag1 appears to be a more statistically
 #| fig-keep: all
 #| label: fig-random-effect
 #| fig-cap: "Random Effects"
+#| fig-height: 8
 reEx <- REsim(top_model)
 plotREsim(reEx)      
 
 ```
-The red line indicates no effect (zero), and the dots represent the random effect estimates with their confidence intervals. Points that are distinguishable from zero (i.e. the confidence band based on 'level' does not cross the red line) are highlighted as black dots, whereas the confidence band cross the red line for grey dots.
+The red line indicates no effect (zero), and the dots represent the random effect estimates with their confidence intervals. Points that are distinguishable from zero (i.e. the confidence band does not cross the red line) are highlighted as black dots, whereas the grey dots are where the confidence band cross the red line.
 
 ### Data
 ```{r}
@@ -209,16 +211,11 @@ The red line indicates no effect (zero), and the dots represent the random effec
 #| label: tbl-coef-random
 #| tbl-cap: "Intercept and coefficients"
 #| tbl-subcap:
-#|  - "Random Effects for Qtr"
-#|  - "Random Effects for BankName:Qtr (selected Banks)"
-ranef(top_model, condVar = TRUE)$Qtr |>
-     mutate(across(where(is.numeric), \(x) round(x,2))) |>  
-        rmarkdown::paged_table()
-
-selected_banks <- unique(paste0(observation_data$Qtr, ":", observation_data$BankName))
-ranef(top_model, condVar = FALSE)$`Qtr:BankName` |> as.data.frame() |> 
-    rownames_to_column(var = "Qtr:BankName") |> 
-    filter(`Qtr:BankName` %in% selected_banks) |>
+#|  - "Random Effects for BankName (selected Banks)"
+selected_banks <- unique(observation_data$BankName)
+ranef(top_model, condVar = FALSE)$BankName |> as.data.frame() |> 
+    rownames_to_column(var = "BankName") |> 
+    filter(BankName %in% selected_banks) |>
     mutate(across(where(is.numeric), \(x) round(x,2))) |>  
         rmarkdown::paged_table()
 ```
@@ -347,24 +344,11 @@ do_hier_cv(estimation_data, init = 13)
 #| - Accuracy Metrics on Training and Cross Validation data for sub-set of banks
 #| - Mean Accuracy Metrics for our sub-set of banks
 #| - Mean Accuracy Metrics across all banks
-cv_results_est <- readr::read_csv("data/results/estimate_hier_metrics.csv",show_col_types = FALSE) |> mutate(across(where(is.numeric), \(x) round(x,4))) |> 
-  dplyr::select(BankName, .type, RMSE, MAE)
 
-cv_results_test <- read_tscv_results("hier") |> group_by(.type,BankName) |> 
-  summarise(across(where(is.numeric), \(x) mean(x, na.rm = TRUE))) |> 
-  mutate(across(where(is.numeric), \(x) round(x,4))) |> 
-  dplyr::select(BankName, .type, RMSE, MAE) |> mutate(.type = "CV") 
-  
-comb <- bind_rows(cv_results_est, cv_results_test) 
-comb |> filter(BankName %in% observation_data$BankName) |> arrange(BankName,.type) |> rmarkdown::paged_table()     
-
-comb |> filter(BankName %in% observation_data$BankName) |> 
-  group_by(.type) |> summarise(across(where(is.numeric), \(x) mean(x, na.rm = TRUE))) |>
-    rmarkdown::paged_table()  
-
-comb |> group_by(.type) |> 
-  summarise(across(where(is.numeric), \(x) mean(x, na.rm = TRUE))) |> 
-    rmarkdown::paged_table()     
+val_results <- get_summary_validation.hierarchy(unique(observation_data$BankName))
+val_results$tbl1 |> rmarkdown::paged_table()
+val_results$tbl2 |> rmarkdown::paged_table()
+val_results$tbl3 |> rmarkdown::paged_table()    
 ```
 
 ## Prediction 
@@ -374,6 +358,7 @@ comb |> group_by(.type) |>
 #| results: hide
 #| fig-keep: all
 #| label: fig-pred-observed-hier
+#| fig-cap: "Prediction vs. Observed Event"
 get_prediction <- function(bank, partner, all_data, model) {
   selected_qtrs <- all_data |> filter(!!as.name(partner) >=0) |> head(8) |> dplyr::select(Quarter)
   event_data <- all_data |> inner_join(selected_qtrs) 
@@ -396,7 +381,7 @@ result <- map2(partner_banks$Bank, partner_banks$Partner, get_prediction, all_da
 
 map2(partner_banks$Bank, partner_banks$Partner, plot_prediction, result, all_data) 
 ```
-
+## Abnormal Results
 ```{r}
 #| warning: false
 #| label: tbl-abnormal-hier
